# fanControl

./: CMakeLists.txt  Controller.h  FanSpeed.cpp  FanSpeed.h  FanSpeed_test.cpp  Limiter.cpp  Limiter.h  Limiter_test.cpp  PController.cpp  PController.h  PController_test.cpp  README.md  TempSensor.cpp  TempSensor.h  TempSensor_test.cpp  main.cpp
